// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid should render GifGrid component 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Avengers
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid should show items when upload images with useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Avengers
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Algo"
      url="https://localhost/algo.jpg"
    />
  </div>
</Fragment>
`;
